--- a/2Dworks.html
+++ b/2Dworks.html
@@ -78,19 +78,19 @@
 
   <div class="gallery">
     <div class="gallery-item">
-      <img src="file:///C|/Users/sally/Desktop/대학교과제/3-1/웹퍼블리싱/기말고사/img/img7.png" alt="2D 작품 1">
+      <img src="img/img7.png" alt="2D 작품 1">
       <div class="caption">UX/UI 디자인 인스테리어</div>
     </div>
     <div class="gallery-item">
-      <img src="file:///C|/Users/sally/Desktop/대학교과제/3-1/웹퍼블리싱/기말고사/img/img8.png" alt="2D 작품 2">
+      <img src="img/img8.png" alt="2D 작품 2">
       <div class="caption">스트리머 팬게임 훈련장</div>
     </div>
     <div class="gallery-item">
-      <img src="file:///C|/Users/sally/Desktop/대학교과제/3-1/웹퍼블리싱/기말고사/img/img9.png" alt="2D 작품 3">
+      <img src="img/img9.png" alt="2D 작품 3">
       <div class="caption">사신 캐릭터 디자인 3면도</div>
     </div>
     <div class="gallery-item">
-      <img src="file:///C|/Users/sally/Desktop/대학교과제/3-1/웹퍼블리싱/기말고사/img/img10.png" alt="2D 작품 4">
+      <img src="img/img10.png" alt="2D 작품 4">
       <div class="caption">패스트푸드 캐릭터 디자인 3면도</div>
     </div>
   </div>
