--- a/3Dworks.html
+++ b/3Dworks.html
@@ -78,27 +78,27 @@
 
   <div class="gallery">
     <div class="gallery-item">
-      <img src="file:///C|/Users/sally/Desktop/대학교과제/3-1/웹퍼블리싱/기말고사/img/img1.png" alt="3D 작품 1">
+      <img src="img/img1.png" alt="3D 작품 1">
       <div class="caption">어프어프 하이볼 포스터 모델링 - Blender</div>
     </div>
     <div class="gallery-item">
-      <img src="file:///C|/Users/sally/Desktop/대학교과제/3-1/웹퍼블리싱/기말고사/img/img2.png" alt="3D 작품 2">
+      <img src="img/img2.png" alt="3D 작품 2">
       <div class="caption">향수병 모델링 - Blender</div>
     </div>
     <div class="gallery-item">
-      <img src="file:///C|/Users/sally/Desktop/대학교과제/3-1/웹퍼블리싱/기말고사/img/img3.png" alt="3D 작품 3">
+      <img src="img/img3.png" alt="3D 작품 3">
       <div class="caption">향수 패키지 디자인 모델링 - Blender</div>
     </div>
     <div class="gallery-item">
-      <img src="file:///C|/Users/sally/Desktop/대학교과제/3-1/웹퍼블리싱/기말고사/img/img4.png" alt="3D 작품 4">
+      <img src="img/img4.png" alt="3D 작품 4">
       <div class="caption">아이소메트릭 미니룸 모델링 - Blender</div>
     </div>
     <div class="gallery-item">
-      <img src="file:///C|/Users/sally/Desktop/대학교과제/3-1/웹퍼블리싱/기말고사/img/img5.png" alt="3D 작품 5">
+      <img src="img/img5.png" alt="3D 작품 5">
       <div class="caption">애니풍 자판기 모델링 - Blender</div>
     </div>
     <div class="gallery-item">
-      <img src="file:///C|/Users/sally/Desktop/대학교과제/3-1/웹퍼블리싱/기말고사/img/img6.gif" alt="3D 작품 6">
+      <img src="img/img6.gif" alt="3D 작품 6">
       <div class="caption">아이 캐릭터 모델링 - Blender</div>
     </div>
   </div>
