--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <div class="content">
     <!-- 포스트잇 1 -->
     <a href="3Dworks.html" class="postit">
-      <img src="file:///C|/Users/sally/Desktop/대학교과제/3-1/웹퍼블리싱/기말고사/img/img1.png" alt="대표작1">
+      <img src="img/img1.png" alt="대표작1">
       <div class="postit-text">
         어프어프 하이볼 포스터 모델링<br>Blender, 개인작
       </div>
@@ -124,15 +124,16 @@
 
     <!-- 포스트잇 2 -->
     <a href="3Dworks.html" class="postit">
-      <img src="file:///C|/Users/sally/Desktop/대학교과제/3-1/웹퍼블리싱/기말고사/img/img4.png" alt="대표작2">
+      <img src="img/img4.png" alt="대표작2">
       <div class="postit-text">
-        아이소메트릭 미니룸 모델링<br>Blender, 개인작
+        아이소메트릭 미니룸 모델링<br>
+        Blender, 개인작
       </div>
     </a>
 
     <!-- 포스트잇 3 -->
     <a href="2Dworks.html" class="postit">
-      <img src="file:///C|/Users/sally/Desktop/대학교과제/3-1/웹퍼블리싱/기말고사/img/img11.png" alt="대표작3">
+      <img src="img/img11.png" alt="대표작3">
       <div class="postit-text">
         UX/UI 디자인 인스테리어<br>UX/UX, 개인작
       </div>
